@startuml

title __MY_APPLICATION.APP's Class Diagram__\n

  namespace com.example.myapplication {
    class com.example.myapplication.AddImage {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.BuildConfig {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.Community {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.ForgotPassword {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.FormToInitiate {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.ImageAdapter {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.ImagesActivity {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.Login {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.MainActivity {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.MyAdapter {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.Register {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.ResetPassword {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.Security {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.Setting {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.SiginAndSignout {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.Upload {
    }
  }
  

  namespace com.example.myapplication {
    class com.example.myapplication.User {
    }
  }
  

  com.example.myapplication.AddImage -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.Community -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.ForgotPassword -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.FormToInitiate -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.ImageAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.myapplication.ImagesActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.ImagesActivity o-- com.example.myapplication.ImageAdapter : mAdapter
  com.example.myapplication.Login -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.Login o-- com.example.myapplication.User : user
  com.example.myapplication.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.MyAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.myapplication.Register -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.Register o-- com.example.myapplication.Security : s
  com.example.myapplication.ResetPassword -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.Setting -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.myapplication.SiginAndSignout -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
